# SupbaseCloud

./: .gitignore  README.md  main.tf  package-lock.json  package.json  pyproject.toml  variables.tf
.github/: .gitignore  workflow.yml
.github/workflows/: blank.yml  python-app.yml
SQL/: .gitignore
migrations/: 20240215120000_create_products_table.sql
supabase/: .gitignore  config.toml
supabase/functions/: funcao-exemplo.js
supabase/functions/tables/: creat_table.ts  index.ts
test/: test_exemple.py
