[tool.poetry]
name = "supbasecloud"
version = "0.1.0"
description = ""
authors = ["RodolfoxvData <136007122+Rodolfoxxv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
